--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Portfolio</title>
 
-	<link rel="stylesheet" href="./../public/css/main.css">
+	<link rel="stylesheet" href="portfolio/public/css/main.css">
 
 </head>
 
@@ -19,13 +19,13 @@
 	
 				<div class="header__content">
 
-					<div class="menu__info icons"><a href="#"><img src="./../public/img/svg/icon_ information_menu.svg" alt="The information."></a></div>
+					<div class="menu__info icons"><a href="#"><img src="portfolio/public/img/svg/icon_ information_menu.svg" alt="The information."></a></div>
 
-					<div class="logo"><a href="#"><img src="./../public/img/svg/logo.svg" alt="The logo."></a></div>
+					<div class="logo"><a href="#"><img src="portfolio/public/img/svg/logo.svg" alt="The logo."></a></div>
 
 					<div class="header__menu">
 
-						<div class="menu__burger icons"><a href="#"><img src="./../public/img/svg/icon_ burger_menu.svg" alt="The burger menu."></a></div>
+						<div class="menu__burger icons"><a href="#"><img src="portfolio/public/img/svg/icon_ burger_menu.svg" alt="The burger menu."></a></div>
 
 						<ul class="menu__list">
 							<li class="menu__link">
