scrollbar and workspace

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
 					<div class="header__menu">
 
-						<div class="menu__burger icons"><a href="#"><img src="cv/img/svg/icon_ burger_menu.svg" alt="The burger menu."></a></div>
+						<!-- <div class="menu__burger icons"><a href="#"><img src="cv/img/svg/icon_ burger_menu.svg" alt="The burger menu."></a></div> -->
+						<div class="menu__burger icons"></div>
+						<!-- <div class="menu__burger icons"><a href="#"><object type="image/svg+xml" data="cv/img/svg/icon_ burger_menu.svg"></object></a></div> -->
 
 						<ul class="menu__list">
 							<li class="menu__link">
@@ -60,10 +62,30 @@
 				</div>
 	
 			</div>
+
+			<div class="progress__container">
+				<div class="progress__bar" id="progress"></div>
+			</div>
+		</div>
+
+
+		<div class="workspace">
+
+			<div class="workspace__content main">
+				<div class="color__dots"></div>
+				<div class="color__linear"></div>
+			</div>
+
+			<div class="workspace__content about__me">
+				<div class="color__dots"></div>
+				<div class="color__linear"></div>
+			</div>
+
 		</div>
 
 	</div>
 
+	<script src="./cv/js/progress.js"></script>
 
 </body>
 
