--- a/index.html
+++ b/index.html
@@ -15,43 +15,70 @@
 	<div class="wrapper">
 		
 		<div class="header">
+			<!-- Header start-->
 			<div class="conteiner">
 	
 				<div class="header__content">
-
-					<a href="#" class="menu__avatar icon-40"><div id="avatar"></div></a>
-					<a href="#" class="logo icon-50"><img src="cv/img/svg/toucan.svg" alt="The logo."></a>
-					<a href="#" class="menu__burger icon-40"><div id="burger"></div></a>
-
-					<div class="header__menu">
-
-						<ul class="menu__list">
-							<li class="menu__link icon-40">
-								<a href="#"><div class="circle"></div></a>
-							</li>
-							<li class="menu__link icon-40">
-								<a href="#"><div class="circle"></div></a>
-							</li>
-							<li class="menu__link icon-40">
-								<a href="#"><div class="circle"></div></a>
-							</li>
-							<li class="menu__link icon-40">
-								<a href="#"><div class="circle"></div></a>
-							</li>
-							<li class="menu__link icon-40">
-								<a href="#"><div class="circle"></div></a>
-							</li>
-						</ul>
-
+					<div class="menu__curtain"></div>
+					<div class="menu__left">
+						<a class="menu__avatar icon-40"><div id="avatar"></div></a>
+						<a href="#" class="logo icon-50"><img src="cv/img/svg/toucan.svg" alt="The logo."></a>
 					</div>
 
+					<div class="menu__center">
+						<div class="center__content">
+							<a href="#" class="menu__logo icon-40"><div id="logo"></div></a>
+							<div class="menu__search">
+								<form>
+									<!-- <div style="width: 18px; height: 18px;"><img src="./cv/img/svg/search.svg" alt="Icons search"></div> -->
+									<input type="text" placeholder="search...">
+								</form>
+							</div>
+							<div class="menu__header">
+								<ul class="menu__list">
+									<li class="menu__link icon-40">
+										<a href="#"><div class="circle"></div></a>
+									</li>
+									<li class="menu__link icon-40">
+										<a href="#"><div class="circle"></div></a>
+									</li>
+									<li class="menu__link icon-40">
+										<a href="#"><div class="circle"></div></a>
+									</li>
+									<li class="menu__link icon-40">
+										<a href="#"><div class="circle"></div></a>
+									</li>
+									<li class="menu__link icon-40">
+										<a href="#"><div class="circle"></div></a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="menu__right">
+						<a class="menu__burger icon-40"><div id="burger"><span></span></div></a>
+						<div class="avatar icon-50"><a href="#"><div class="circle"></div></a></div>
+					</div>
+
+					<!-- <a href="#" class="menu__avatar icon-40"><div id="avatar"></div></a> -->
+					<!-- <a href="#" class="logo icon-50"><img src="cv/img/svg/toucan.svg" alt="The logo."></a> -->
+
+
+					<!-- <a class="menu__burger icon-40"><div id="burger"></div></a> -->
+
+
+
+					<!-- <div class="icon-40"><a href="#"><div class="circle"></div></a></div> -->
+
 				</div>
-	
+
 			</div>
 
 			<div class="progress__container">
 				<div class="progress__bar" id="progress"></div>
 			</div>
+			<!-- Header end-->
 		</div>
 
 
