--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,91 @@
 </head>
 <body>
 
-<div id="wrapper"></div>
+<!-- SHELL -->
+<div id="wrapper">
+
+	<!-- HEADER -->
+	<header class="header">
+		<div class="header__container">
+			<div class="header__body">
+
+				<!-- LOGO -->
+				<div class="logo">
+					<a href="/" class="logo__picture">
+						<img src="./img/logo/logo60px.svg" alt="Logo">
+					</a>
+				</div>
+
+				<!-- MENU -->
+				<menu class="menu">
+					<ul class="menu__list">
+						<!-- HOME -->
+						<li class="menu__item menu_sub_one">
+							<a class="menu__link">home</a>
+							<!-- SUB HOME -->
+							<div class="sub-menu sub-menu_one">
+								<ul class="sub-menu__list">
+									<li class="sub-menu__item">
+										<a href="/#about-me" class="sub-menu__link">about me</a>
+									</li>
+									<li class="sub-menu__item">
+										<a href="/#skills" class="sub-menu__link">skills</a>
+									</li>
+									<li class="sub-menu__item">
+										<a href="/#experience" class="sub-menu__link">experience</a>
+									</li>
+									<li class="sub-menu__item">
+										<a href="/#works" class="sub-menu__link">works</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<!-- BLOG -->
+						<li class="menu__item menu_sub_one">
+							<a href="/blog" class="menu__link">blog</a>
+							<!-- SUB BLOG -->
+							<div class="sub-menu sub-menu_one">
+								<ul class="sub-menu__list">
+									<li class="sub-menu__item">
+										<a href="/blog#languages" class="sub-menu__link">languages</a>
+									</li>
+									<li class="sub-menu__item">
+										<a href="/blog#technologies" class="sub-menu__link">technologies</a>
+									</li>
+									<li class="sub-menu__item">
+										<a href="/blog#algorithms" class="sub-menu__link">algorithms</a>
+									</li>
+									<li class="sub-menu__item">
+										<a href="/blog#databases" class="sub-menu__link">databases</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<!-- PROJECTS -->
+						<li class="menu__item">
+							<a href="#" class="menu__link">projects</a>
+						</li>
+						<!-- CONTACT -->
+						<li class="menu__item">
+							<a href="#" class="menu__link">contact</a>
+						</li>
+					</ul>
+				</menu>
+
+			</div>
+		</div>
+	</header>
+
+	<!-- APP -->
+	<div class="app">
+		<div class="app__container">
+			<div class="app__body">
+				<!-- CONTENT -->
+			</div>
+		</div>
+	</div>
+
+</div>
 
 </body>
 </html>
