--- a/src/index.html
+++ b/src/index.html
@@ -28,58 +28,73 @@
 
 				<!-- MENU -->
 				<menu class="menu">
-					<ul class="menu__list">
-						<!-- HOME -->
-						<li class="menu__item menu_sub_one">
-							<a class="menu__link">home</a>
-							<!-- SUB HOME -->
-							<div class="sub-menu sub-menu_one">
-								<ul class="sub-menu__list">
-									<li class="sub-menu__item">
-										<a href="/#about-me" class="sub-menu__link">about me</a>
+					<!-- BURGER -->
+					<div class="menu__burger" id="headerMenuBurger"><span></span></div>
+					<!-- MENU BOX -->
+					<div class="menu__box">
+						<div class="menu__container">
+							<div class="menu__content">
+								<ul class="menu__list">
+									<!-- HOME -->
+									<li class="menu__item menu_sub_one">
+										<div class="menu_sub_box">
+											<a href="/#" class="menu__link">home</a>
+											<span class="menu__arrow"></span>
+										</div>
+										<!-- SUB HOME -->
+										<div class="sub-menu sub-menu_one">
+											<ul class="sub-menu__list">
+												<li class="sub-menu__item">
+													<a href="/#about" class="sub-menu__link">about me</a>
+												</li>
+												<li class="sub-menu__item">
+													<a href="/#skills" class="sub-menu__link">skills</a>
+												</li>
+												<li class="sub-menu__item">
+													<a href="/#experience" class="sub-menu__link">experience</a>
+												</li>
+												<li class="sub-menu__item">
+													<a href="/#works" class="sub-menu__link">works</a>
+												</li>
+											</ul>
+										</div>
 									</li>
-									<li class="sub-menu__item">
-										<a href="/#skills" class="sub-menu__link">skills</a>
+									<!-- BLOG -->
+									<li class="menu__item menu_sub_one">
+										<div class="menu_sub_box">
+											<a href="/blog" class="menu__link">blog</a>
+											<span class="menu__arrow"></span>
+										</div>
+										<!-- SUB BLOG -->
+										<div class="sub-menu sub-menu_one">
+											<ul class="sub-menu__list">
+												<li class="sub-menu__item">
+													<a href="/blog#languages" class="sub-menu__link">languages</a>
+												</li>
+												<li class="sub-menu__item">
+													<a href="/blog#technologies" class="sub-menu__link">technologies</a>
+												</li>
+												<li class="sub-menu__item">
+													<a href="/blog#algorithms" class="sub-menu__link">algorithms</a>
+												</li>
+												<li class="sub-menu__item">
+													<a href="/blog#databases" class="sub-menu__link">databases</a>
+												</li>
+											</ul>
+										</div>
 									</li>
-									<li class="sub-menu__item">
-										<a href="/#experience" class="sub-menu__link">experience</a>
+									<!-- PROJECTS -->
+									<li class="menu__item">
+										<a href="#" class="menu__link">projects</a>
 									</li>
-									<li class="sub-menu__item">
-										<a href="/#works" class="sub-menu__link">works</a>
+									<!-- CONTACT -->
+									<li class="menu__item">
+										<a href="#" class="menu__link">contact</a>
 									</li>
 								</ul>
 							</div>
-						</li>
-						<!-- BLOG -->
-						<li class="menu__item menu_sub_one">
-							<a href="/blog" class="menu__link">blog</a>
-							<!-- SUB BLOG -->
-							<div class="sub-menu sub-menu_one">
-								<ul class="sub-menu__list">
-									<li class="sub-menu__item">
-										<a href="/blog#languages" class="sub-menu__link">languages</a>
-									</li>
-									<li class="sub-menu__item">
-										<a href="/blog#technologies" class="sub-menu__link">technologies</a>
-									</li>
-									<li class="sub-menu__item">
-										<a href="/blog#algorithms" class="sub-menu__link">algorithms</a>
-									</li>
-									<li class="sub-menu__item">
-										<a href="/blog#databases" class="sub-menu__link">databases</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<!-- PROJECTS -->
-						<li class="menu__item">
-							<a href="#" class="menu__link">projects</a>
-						</li>
-						<!-- CONTACT -->
-						<li class="menu__item">
-							<a href="#" class="menu__link">contact</a>
-						</li>
-					</ul>
+						</div>
+					</div>
 				</menu>
 
 			</div>
@@ -90,7 +105,79 @@
 	<div class="app">
 		<div class="app__container">
 			<div class="app__body">
+
 				<!-- CONTENT -->
+				<main class="content">
+
+					<!-- HOME -->
+					<section id="sectionHome" class="section fullscreen">
+						<div class="section__container">
+							<div class="section__body">
+								<div class="welcome">
+									<div class="welcome__avatar"><img src="./img/logo/logo60px.svg" alt="Avatar."></div>
+									<div class="welcome__name">Iosif Isachko</div>
+									<div class="welcome__line"></div>
+									<div class="welcome__status">
+										<div class="label label_orange">full stack developer</div>
+									</div>
+									<a href="#about" class="more">
+										<span class="more__text">more</span>
+										<div class="more__arrow">
+											<span class="_icon-arrow"></span>
+											<span class="_icon-arrow"></span>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+					</section>
+
+					<!-- ABOUT ME -->
+					<section id="about" class="section">
+						<div class="section__container">
+							<div class="section__body"></div>
+						</div>
+					</section>
+
+					<!-- PHOTO -->
+					<section id="sectionPhoto" class="section fullscreen">
+						<div class="section__container">
+							<div class="section__body"></div>
+						</div>
+					</section>
+
+					<!-- SKILLS -->
+					<section id="skills" class="section">
+						<div class="section__container">
+							<div class="section__body"></div>
+						</div>
+					</section>
+
+					<!-- EXPERIENCE -->
+					<section id="experience" class="section">
+						<div class="section__container">
+							<div class="section__body"></div>
+						</div>
+					</section>
+
+					<!-- WORKS -->
+					<section id="works" class="section">
+						<div class="section__container">
+							<div class="section__body"></div>
+						</div>
+					</section>
+
+				</main>
+
+				<!-- FOOTER -->
+				<footer class="footer">
+					<div class="footer__container">
+						<div class="footer__body">
+							<span class="copyright">Copyright © Iosif Isachko 2021</span>
+						</div>
+					</div>
+				</footer>
+
 			</div>
 		</div>
 	</div>
