--- a/src/index.html
+++ b/src/index.html
@@ -60,18 +60,17 @@
 										</div>
 									</li>
 									<!-- BLOG -->
-									<li class="menu__item menu_sub_one">
+									<!-- <li class="menu__item menu_sub_one">
 										<div class="menu_sub_box">
 											<a href="#languages" class="menu__link">blog</a>
 											<span class="menu__arrow"></span>
 										</div>
-										<!-- SUB BLOG -->
 										<div class="sub-menu sub-menu_one">
 											<ul class="sub-menu__list">
 												<li class="sub-menu__item">
 													<a href="#languages" class="sub-menu__link">languages</a>
 												</li>
-												<!-- <li class="sub-menu__item">
+												<li class="sub-menu__item">
 													<a href="#technologies" class="sub-menu__link">technologies</a>
 												</li>
 												<li class="sub-menu__item">
@@ -79,10 +78,10 @@
 												</li>
 												<li class="sub-menu__item">
 													<a href="#databases" class="sub-menu__link">databases</a>
-												</li> -->
+												</li>
 											</ul>
 										</div>
-									</li>
+									</li> -->
 									<!-- PROJECTS -->
 									<!-- <li class="menu__item">
 										<a href="#projects" class="menu__link">projects</a>
@@ -172,10 +171,43 @@
 						</div>
 					</section>
 
-					<!-- SLIDER -->
-					<section id="slider" class="section fullscreen">
+					<!-- WORKS -->
+					<section id="works" class="section">
 						<div class="section__container">
-							<div class="section__body"></div>
+							<div class="section__body">
+								<div class="topic">
+									<div class="topic__title">works</div>
+									<div class="topic__description">Creative work in various areas of programming</div>
+								</div>
+								<div class="section__content">
+									<div class="gallery">
+										<div class="card">
+											<div class="card__picture">
+												<img class="card__picture_img" src="./img/test/300x300.svg" alt="Work.">
+											</div>
+											<a href="#" class="card__title">open</a>
+										</div>
+										<div class="card">
+											<div class="card__picture">
+												<img class="card__picture_img" src="./img/test/400x300.svg" alt="Work.">
+											</div>
+											<a href="#" class="card__title">open</a>
+										</div>
+										<div class="card">
+											<div class="card__picture">
+												<img class="card__picture_img" src="./img/test/300x400.svg" alt="Work.">
+											</div>
+											<a href="#" class="card__title">open</a>
+										</div>
+										<div class="card">
+											<div class="card__picture">
+												<img class="card__picture_img" src="./img/gallery/default.svg" alt="Work.">
+											</div>
+											<a href="#" class="card__title">open</a>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</section>
 
@@ -255,6 +287,13 @@
 						</div>
 					</section>
 
+					<!-- SLIDER -->
+					<section id="slider" class="section fullscreen">
+						<div class="section__container">
+							<div class="section__body"></div>
+						</div>
+					</section>
+
 					<!-- EXPERIENCE -->
 					<!-- <section id="experience" class="section">
 						<div class="section__container">
@@ -262,52 +301,47 @@
 						</div>
 					</section> -->
 
-					<!-- WORKS -->
-					<section id="works" class="section">
-						<div class="section__container">
-							<div class="section__body">
-								<div class="topic">
-									<div class="topic__title">works</div>
-									<div class="topic__description">Creative work in various areas of programming</div>
-								</div>
-								<div class="section__content">
-									<div class="gallery">
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/test/300x300.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/test/400x300.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/test/300x400.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-										<div class="card">
-											<div class="card__picture">
-												<img class="card__picture_img" src="./img/gallery/default.svg" alt="Work.">
-											</div>
-											<a href="#" class="card__title">open</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</section>
-
 				</main>
 
 				<!-- FOOTER -->
 				<footer class="footer">
 					<div class="footer__container">
 						<div class="footer__body">
+							<div id="contact" class="contact">
+								<div class="contact__container">
+									<div class="contact__body">
+										<div class="social">
+											<div class="social__body">
+												<a class="social__item" href="https://t.me/I0S1F" target="_blank">
+													<span class="social__item_icon _icon-telegram"></span>
+													<span class="social__item_title">telegram</span>
+												</a>
+												<a class="social__item" href="https://github.com/luamoris" target="_blank">
+													<span class="social__item_icon _icon-github"></span>
+													<span class="social__item_title">github</span>
+												</a>
+												<a class="social__item" href="https://www.linkedin.com/in/iosif-isachko-2631061a7" target="_blank">
+													<span class="social__item_icon _icon-linkedin"></span>
+													<span class="social__item_title">linkedin</span>
+												</a>
+												<a class="social__item" href="https://codepen.io/luamoris/pens/public" target="_blank">
+													<span class="social__item_icon _icon-codepen"></span>
+													<span class="social__item_title">codepen</span>
+												</a>
+											</div>
+										</div>
+										<div class="map">
+											<div class="map__body">
+												<h3 class="map__address">Address: Kyiv, Ukraine</h3>
+												<iframe class="map__frame"
+													src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d23504.741352954003!2d35.47958542547373!3d38.72238725252775!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1617122558254!5m2!1sru!2sua"
+													allowfullscreen="" loading="lazy">
+												</iframe>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 							<span class="copyright">Copyright © Iosif Isachko 2021</span>
 						</div>
 					</div>
